# prose-arc

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: ci.yml  deploy-production.yml  deploy-staging.yml
docs/: logs.txt  module-dependency-graph.md  phase-1a-checklist.md  phase-1b-checklist.md  phase-1c-checklist.md  phase-1d-checklist.md  phase-1e-checklist.md  phase-1f-checklist.md  writing-app-architecture.md  writing-app-implementation-plan.md  writing-software-market-report.md
src/: CLAUDE.md
src/backend/: Dockerfile  pyproject.toml
src/backend/app/: main.py
src/backend/app/api/v1/: health.py
src/backend/app/core/: auth.py  config.py  db.py  events.py  limiter.py  logging.py  models.py  redis_client.py  storage.py
src/backend/app/modules/billing/: models.py  router.py  schemas.py  service.py
src/backend/app/modules/codex/: models.py  router.py  schemas.py  service.py
src/backend/app/modules/export/: models.py  router.py  schemas.py  service.py
src/backend/app/modules/export/renderers/: base.py  docx_renderer.py  epub_renderer.py  pdf_renderer.py  utils.py
src/backend/app/modules/goals/: models.py  router.py  schemas.py  service.py
src/backend/app/modules/identity/: models.py  router.py  schemas.py  service.py
src/backend/app/modules/manuscript/: models.py  router.py  schemas.py  service.py
src/backend/app/modules/notifications/: models.py  router.py  schemas.py  service.py
src/backend/app/modules/plotting/: models.py  router.py  schemas.py  service.py
src/backend/app/modules/versioning/: models.py  router.py  schemas.py  service.py
src/backend/app/tasks/: celery_app.py  export_tasks.py  manuscript_tasks.py  versioning_tasks.py
src/backend/migrations/: alembic.ini  env.py  script.py.mako
src/backend/migrations/versions/: 0001_initial.py  0002_manuscript.py  0003_codex_plotting.py  0004_versioning_goals.py  0005_soft_deletes.py  0006_export_billing_notifications.py  0007_invite_feedback.py
src/backend/scripts/: generate_invite_codes.py  init-db.sql  init-fake-gcs.sh  init-minio.sh  seed.py
src/backend/tests/: conftest.py
src/backend/tests/core/: test_events.py  test_storage.py
src/backend/tests/modules/billing/: test_billing.py
src/backend/tests/modules/codex/: test_codex.py  test_links.py  test_mentions.py
src/backend/tests/modules/export/: test_export.py
src/backend/tests/modules/goals/: test_goals.py
src/backend/tests/modules/identity/: test_auth.py
src/backend/tests/modules/manuscript/: test_binder.py  test_documents.py  test_projects.py  test_search.py
src/backend/tests/modules/notifications/: test_notifications.py
src/backend/tests/modules/plotting/: test_plotting.py
src/backend/tests/modules/versioning/: test_versioning.py
src/frontend/: Dockerfile  package-lock.json  package.json  vite.config.ts  vitest.config.ts
src/frontend/src/: App.tsx  index.css  main.tsx
src/frontend/src/api/: billing.ts  client.ts  codex.ts  export.ts  goals.ts  manuscripts.ts  (+3 more)
(+57 files in other folders)
